--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^8.12.1",
     "nodemon": "^3.1.9",
     "path": "^0.12.7",
-    "pug": "^3.0.3"
+    "pug": "^3.0.3",
+    "stream-chat": "^9.9.0"
   }
 }
