--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stream-io/video-client": "^1.25.0",
+    "@stream-io/video-react-sdk": "^1.18.6",
     "axios": "^1.8.4",
     "medicare-app": "file:",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1",
-    "recharts": "^2.15.3"
+    "recharts": "^2.15.3",
+    "stream-chat": "^9.9.0",
+    "stream-chat-react": "^13.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
