--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,14 +13,18 @@
     "@stream-io/video-client": "^1.25.0",
     "@stream-io/video-react-sdk": "^1.18.6",
     "axios": "^1.8.4",
+    "lucide-react": "^0.523.0",
     "medicare-app": "file:",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
-    "stream-chat": "^9.9.0",
-    "stream-chat-react": "^13.2.1"
+    "stream-chat": "^9.10.0",
+    "stream-chat-react": "^13.2.1",
+    "toast": "^0.5.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
