--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
     "nodemon": "^3.1.9",
     "path": "^0.12.7",
     "pug": "^3.0.3",
-    "stream-chat": "^9.9.0"
+    "stream-chat": "^9.9.0",
+    "stripe": "^18.3.0"
   }
 }
