--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@stream-io/video-client": "^1.25.0",
     "@stream-io/video-react-sdk": "^1.18.6",
+    "@stripe/stripe-js": "^7.5.0",
     "axios": "^1.8.4",
     "lucide-react": "^0.523.0",
     "medicare-app": "file:",
