--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "recharts": "^2.15.3",
     "stream-chat": "^9.10.0",
     "stream-chat-react": "^13.2.1",
+    "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^2.1.0",
     "toast": "^0.5.4",
